--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
 html,body{
     height: 100%;
     color: white;
@@ -11,7 +12,7 @@ html,body{
 
 nav {
     padding: 1em;
-    width: 100vw;
+    width: 100%;
 }
 
 nav p{
